<resources>
    <string name="app_name">SeuBiu</string>

    <string name="dashboard">DashBoard</string>

    <!-- Strings related to login -->
    <string name="prompt_email">user / email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="title_activity_job_location">Map</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="recentes">Solicitações Recentes</string>

    <string name="escolha_profissional">Escolha o profissional:</string>
    <string name="qual_servico">Para qual serviço:</string>
    <string name="servico">Serviço:</string>


    <string name="sugestao">Sugestão:</string>
    <string name="endereco">Endereços:</string>

    <string name="resumo">Faça um resumo do que você precisa:</string>

    <string name="onde_sera">Onde será o serviço:</string>
    <string name="mapa">Ver no Mapa</string>

    <string name="qnd_sera">Quando será o serviço:</string>
    <string name="escolha_opcao">Escolha uma Opção</string>

    <string name="enderecos_salvos">Endereços Salvos</string>

    <string name="loren_ipsun">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="salvar">Salvar</string>
    <string name="bem_vindo">Seja bem vindo!</string>
    <string name="solicitar">Solicitar</string>
    <string name="solicitados">Serviços Solicitados</string>
    <string name="realizados">Serviços Realizados</string>
    <string name="recomendacoes">Recomendações</string>
    <string name="conta">Criar minha conta</string>
    <string name="login">Login</string>
    <string name="proximo">Próximo</string>
    <string name="nao_encontrou">Não encontrou o profissional que precisa?</string>
    <string name="clique_aqui">Clique aqui</string>
    <string name="professional">Professional:</string>
    <string name="title_activity_side_menu">SideMenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login_fail">Login Falhou</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
</resources>
